css finished buttons added 50% comp

--- a/App/Views/Home/index.html
+++ b/App/Views/Home/index.html
@@ -4,41 +4,57 @@
 
 {% block body %}
 
-    <h1 class="text-center">Welcome To INS GROUP</h1>
-    <p class="text-center">
-        
+    <h1 class="text-center m-2" style="color: orange;" >Welcome To INS GROUP</h1>
+    <p class="text-center">        
         It's a page developed and designed by CSIT students of birendra multiple campus.
     </p>
 
-    <div class = "w-100 mx-auto border p-4 my-4" >
-        <p>
-            <h1>Why is this page developed?</h1>
-            <hr>
-            This page was developed inorder to help students and general people to
-            rise financial and other help to needed one.
-            <h5>What for students?</h5>
-            Students can post their startup ideas their details for invester to attract so that they
-            need not to scramble here and there for invester. Students can find lots of invester in
-            our page who can invest on you if your startup plan is really good.
-            <h5>What for general public?</h5>
-            General public can post their emmergency help post so that anyone near them can help them.
-        </p>
+    <div class = "w-100 mx-auto border p-4 my-4" style="position:relative;">
+        <div class="card-group" style="font-family: Verdana, Geneva, Tahoma, sans-serif;">
+            <div class="bg-dark card" style="width: 18rem ; align-items: center;">
+                <div class="card-body">
+                    <h1 class="card-text " style="margin-bottom: 4px; color: orange; text-align: center;" >
+                        Why is this page developed?
+                        <hr>
+                    </h1>
+                    <p class="text-white">
+                        This page was developed inorder to help students and general people to
+                        rise financial and other help to needed one.
+                    </p>
+                    <h5 style="color: orange;" >What for students?</h5>
+                    <p class="text-white">                            
+                        Students can post their startup ideas their details for invester to attract so that they
+                        need not to scramble here and there for invester. Students can find lots of invester in
+                        our page who can invest on you if your startup plan is really good.
+                    </p>
+                    <h5 style="color: orange;" >What for general public?</h5>
+                    <p class="text-white">
+                        General public can post their emmergency help post so that anyone near them can help them.
+                    </p>
+                </div>
+            </div>
+            <div class="bg-dark card" style="width: 18rem ; align-items: center;">
+                <div class="card-body">
+                    <h1 class="card-text " style="margin-bottom: 4px; color: orange; text-align: center;" >
+                        For whom is this page developed?
+                        <hr>
+                    </h1>
+                    <p class="text-white">
+                        This page was developed inorder to help students and general people to
+                        rise financial and other help to needed one.
+                    </p>
+                    <h5 style="color: orange;" >What for students?</h5>
+                    <p class="text-white">                            
+                        Students can post their startup ideas their details for invester to attract so that they
+                        need not to scramble here and there for invester. Students can find lots of invester in
+                        our page who can invest on you if your startup plan is really good.
+                    </p>
+                    <h5 style="color: orange;" >What for general public?</h5>
+                    <p class="text-white">
+                        General public can post their emmergency help post so that anyone near them can help them.
+                    </p>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class = "w-100 mx-auto border p-4 my-4" >
-        <p>
-            <h1>For whom is this page developed?</h1>
-            <hr>
-            This page was developed for students and general public.
-            <h5>What for students?</h5>
-            Students can post their startup ideas their details for invester to attract so that they
-            need not to scramble here and there for invester. Students can find lots of invester in
-            our page who can invest on you if your startup plan is really good.
-            <h5>What for general public?</h5>
-            General public can post their emmergency help post so that anyone near them can help them.
-        </p>
-    </div>  
-
-
-    
-
 {% endblock %}
