--- a/App/Views/Password/forgot.html
+++ b/App/Views/Password/forgot.html
@@ -4,16 +4,17 @@
 
 {% block body %}
 
-    <h1>Request password reset</h1>
-
-    <form method="post" action="/password/request-reset">
-
-        <div class="form-group">
-            <label for="inputEmail">Email address</label>
-            <input type="email" id="inputEmail" name="email" placeholder="Email address" autofocus required class="form-control" />
+    <div style="align-items: center; margin: 15px;">
+        <div class="w-50  mx-auto border p-4 my-4" style="box-shadow: 5px 5px 5px orange; border-radius: 10px; margin-bottom: 10px;  justify-content: center;">
+            <h1 style="color: orange;">Request password reset</h1>
+            <form method="post" action="/password/request-reset">
+                <div class="form-group">
+                    <label for="inputEmail" style="color: orange;">Email address</label>
+                    <input type="email" id="inputEmail" name="email" placeholder="Email address" autofocus required class="form-control" />
+                </div>
+                <button type="submit" class="btn logbtn btn-default">Send password reset</button>
+            </form>
         </div>
-
-        <button type="submit" class="btn btn-default">Send password reset</button>
-    </form>
+    </div>
 
 {% endblock %}
