--- a/App/Views/Signup/new.html
+++ b/App/Views/Signup/new.html
@@ -47,20 +47,20 @@
 {% endblock %}
 
 {% block body %}
-    <h1 class="text-center" >Sign up</h1>
-        {% if user.errors is not empty %}
-            <div class="alert alert-danger">
-                <p>Errors:</p>
-                <ul>
-                    {% for error in user.errors %}
-                    <li>{{ error }}</li>
-                    {% endfor %}
-                </ul>
-            </div>      
-        {% endif %}  
-    <div class="justify-content-center d-flex">
-        <div class="row card text-dark bg-warning mb-3">
-            <div>
+    <div class="justify-content-center d-flex" style="justify-content:center; align-items: center; margin: 15px; min-width:95%;">
+        <div class="mx-auto border p-4 my-4" style="box-shadow: 5px 5px 5px orange; border-radius: 10px; margin-bottom: 10px;  justify-content: center;">
+            <h1 style="color: orange;">Sign up</h1>
+            {% if user.errors is not empty %}
+                <div class="alert alert-danger">
+                    <p>Errors:</p>
+                    <ul>
+                        {% for error in user.errors %}
+                        <li>{{ error }}</li>
+                        {% endfor %}
+                    </ul>
+                </div>      
+            {% endif %}  
+            <!-- <div> -->
                 <form method="post" action="/signup/create" id="formSignup" enctype="multipart/form-data"> 
                     <div class="form-group">
                         <label for="inputName">Name</label>
@@ -101,10 +101,16 @@
                             <option value="Signup as invester">Signup as Invester</option>
                         </select>
                     </div>
-                    
-                    <button type="submit" class="btn btn-default">Sign up</button> 
+                    <ul style="list-style-type: none; padding: 5px;">
+                        <li style="padding-bottom: 9px;">                    
+                            <button type="submit" class="btn logbtn">Sign up</button> 
+                        </li>
+                        <li>
+                            Already Signed? please <a class="btn logbtn" href="/login/new">Log in</a>
+                        </li>
+                    </ul>
                 </form>
-            </div>
+            <!-- </div> -->
         </div>
     </div>
 {% endblock %}
