--- a/App/Views/post/index.html
+++ b/App/Views/post/index.html
@@ -4,25 +4,20 @@
 
 {% block body %}
 
-    <!-- <h1 class="text-center">Welcome</h1> -->
-    {% if current_user %}            
-        <h5><a class="btn" href="/post/add">Add a post</a></h5>
-    {% endif %}
-
     {% if current_user.catogery == "Signup as student" %}
-        <p class="alert alert-info">
+        <p class="alert alert-info m-1 p-0">
             Hello <b>{{ current_user.name }} </b>you are viewing post as Student.
         </p>
         
     {% elseif current_user.catogery == "Signup as invester" %}
-        <p class="alert alert-info">
+        <p class="alert alert-info m-1 p-0">
             Hello {{ current_user.name }} you are viewing post as Invester.
         </p>
     {% else %}
         <p class="alert alert-info m-1 p-0">
             You can only view Emergency Posts. To add post or View other posts please
-            <a class="btn btn-warning m-1" href="/signup/new">Sign up</a> or 
-            <a class="btn btn-warning m-1" href="/login">log in</a>
+            <a class="btn logbtn m-1" href="/signup/new">Sign up</a> or 
+            <a class="btn logbtn m-1" href="/login">log in</a>
         </p>
     {% endif %}
 
@@ -30,30 +25,36 @@
     
     <div class="justify-content-center d-flex">
         <div class="row">
-            <div>                
+            <div>
+                {% if current_user %}            
+                    <h5 class="justify-content-center d-flex"><a class="btn logbtn mt-2" href="/post/add">Add a post</a></h5>
+                {% endif %}
                 {% for details in postDetails %}
                     {% if details.catogery == 'Emergency Help' %}
                         <div class="card text-dark bg-warning mb-3">
                             <div class="card-header">
-                                <a href="/people/profile-visit?id={{ details.user_id }}"><b>{{ details.name }}</b></a> posted on <b>{{ details.catogery }}</b>
                                 {% if current_user.id == details.user_id %}
-                                <a href="/post/edit?post_id={{ details.id }}">edit</a>
+                                    <a class="logbtn" href="/profile/show"><b>{{ details.name }}</b></a> posted on <b>{{ details.catogery }}</b>
+                                    <a class="logbtn" href="/post/edit?post_id={{ details.id }}">edit</a>
+                                {% else %}
+                                    <a class="logbtn" href="/people/profile-visit?id={{ details.user_id }}"><b>{{ details.name }}</b></a> posted on <b>{{ details.catogery }}</b>
                                 {% endif %}
                             </div>
                             <div class="card-body">
                                 <h3 class="card-title">{{ details.title }}</h3>
                                 <p class="card-text">{{ details.discription }}</p>
                             </div>
-                            <!-- <button type="submit">Help</button> -->
                         </div>
                     {% endif %}
                     
                     {% if details.catogery == 'Seeking to invest' and current_user.catogery == "Signup as student" %}
                         <div class="card text-dark bg-warning mb-3">
                             <div class="card-header">
-                                <a href="/people/profile-visit?id={{ details.user_id }}"><b>{{ details.name }}</b></a> posted on <b>{{ details.catogery }}</b>
                                 {% if current_user.id == details.user_id %}
-                                <a href="/post/edit?post_id={{ details.id }}">edit</a>
+                                    <a class="logbtn" href="/profile/show"><b>{{ details.name }}</b></a> posted on <b>{{ details.catogery }}</b>
+                                    <a class="logbtn" href="/post/edit?post_id={{ details.id }}">edit</a>
+                                {% else %}
+                                    <a class="logbtn" href="/people/profile-visit?id={{ details.user_id }}"><b>{{ details.name }}</b></a> posted on <b>{{ details.catogery }}</b>
                                 {% endif %}
                             </div>
                             <div class="card-body">
@@ -67,9 +68,11 @@
                     {% if details.catogery == 'Seeking for invester' and current_user.catogery == "Signup as invester" %}
                         <div class="card text-dark bg-warning mb-3">
                             <div class="card-header">
-                                <a href="/people/profile-visit?id={{ details.user_id }}"><b>{{ details.name }}</b></a> posted on <b>{{ details.catogery }}</b>
                                 {% if current_user.id == details.user_id %}
-                                <a href="/post/edit?post_id={{ details.id }}">edit</a>
+                                    <a class="logbtn" href="/profile/show"><b>{{ details.name }}</b></a> posted on <b>{{ details.catogery }}</b>
+                                    <a class="logbtn" href="/post/edit?post_id={{ details.id }}">edit</a>
+                                {% else %}
+                                    <a class="logbtn" href="/people/profile-visit?id={{ details.user_id }}"><b>{{ details.name }}</b></a> posted on <b>{{ details.catogery }}</b>
                                 {% endif %}
                             </div>
                             <div class="card-body">
@@ -82,16 +85,17 @@
                     {% if current_user.id == details.user_id and details.catogery != "Emergency Help" %}
                         <div class="card text-dark bg-warning mb-3">
                             <div class="card-header">
-                                <a href="/people/profile-visit?id={{ details.user_id }}"><b>{{ details.name }}</b></a> posted on <b>{{ details.catogery }}</b>
                                 {% if current_user.id == details.user_id %}
-                                <a href="/post/edit?post_id={{ details.id }}">edit</a>
+                                    <a class="logbtn" href="/profile/show"><b>{{ details.name }}</b></a> posted on <b>{{ details.catogery }}</b>
+                                    <a class="logbtn" href="/post/edit?post_id={{ details.id }}">edit</a>
+                                {% else %}
+                                    <a class="logbtn" href="/people/profile-visit?id={{ details.user_id }}"><b>{{ details.name }}</b></a> posted on <b>{{ details.catogery }}</b>
                                 {% endif %}
                             </div>
                             <div class="card-body">
                                 <h3 class="card-title">{{ details.title }}</h3>
                                 <p class="card-text">{{ details.discription }}</p>
                             </div>
-                            <!-- <button type="submit">Help</button> -->
                         </div>
                     {% endif %}
                 {% endfor %}
