--- a/App/Views/Profile/show.html
+++ b/App/Views/Profile/show.html
@@ -7,7 +7,7 @@
         <div class=" mx-auto border p-2 my-0" style="border:orange; box-shadow: 5px 5px 5px orange; border-radius: 20px; margin-bottom: 10px;  justify-content: center;">
             <div class="profile bg-dark">
                 <!-- <h1 style="color: orange;"> -->
-                    <img src="/images/profile/{{ user.image }}" class="" style="min-width: 100%; height: 300px; object-fit: cover; align-items: center; object-position: 100% 25%;" alt="Cover photo" >
+                    <img src="/images/profile/{{ user.image }}" class="" style="min-width: 100%; height: 300px; object-fit: cover; align-items: center; border-radius: 20px; object-position: 100% 25%;" alt="Cover photo" >
                 <!-- </h1> -->
                 <div class="bottom-left">                    
                     <img src="/images/profile/{{ user.image }}" class="img-thumbnail p-0" style="border: 5px solid orange; width:200px; height:200px; border-radius: 50%; object-fit: cover; align-items: left;" alt="Profile picture" >
