General section added with login require

--- a/App/Views/Login/new.html
+++ b/App/Views/Login/new.html
@@ -20,7 +20,7 @@
                     <label style="color: orange;">
                         <input type="checkbox" name="remember_me" {% if remember_me %} checked="checked"{% endif %} /> Remember me
                     </label>
-                    <a href="/password/forgot" class="logbtn btn btn-default">Forgot password?</a>
+                    <a href="/password/forgot" class="logbtn btn btn-default m-1">Forgot password?</a>
                 </div>            
                 <ul style="list-style-type: none; padding: 5px;">
                     <li style="padding-bottom: 9px;"> 
