--- a/App/Views/base.html
+++ b/App/Views/base.html
@@ -120,7 +120,7 @@
                         <a class="btn logbtn me-2" href="/post/emergency">Emergency</a>
                     </li>
                     <li class="nav-item">
-                        <a class="btn logbtn me-2" href="#">General</a>
+                        <a class="btn logbtn me-2" href="/post/general">General</a>
                     </li>
                     {% endif %}
                 </ul>
